--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.21",
+    "bootstrap": "^5.1.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
@@ -31,6 +32,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "jimp": "^0.16.1",
+    "robotjs": "^0.6.0"
   }
 }
