--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.21",
     "bootstrap": "^5.1.3",
+    "browserify": "^17.0.0",
+    "glob": "^7.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-purgecss": "^4.1.3",
     "gulp-sass": "^5.1.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglifycss": "^1.1.0",
     "merge-stream": "^2.0.0",
     "sass": "^1.49.9",
-    "typescript": "^4.6.2"
+    "tsify": "^5.0.4",
+    "typescript": "^4.6.2",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "jimp": "^0.16.1",
