--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "outDir": "dist",
         "baseUrl": ".",
         "watch": true,
+        "resolveJsonModule": true,
         "rootDir": "src"
     },
     "include": [
