Non numeric values are now being correctly displayed as "non working"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "baseUrl": ".",
         "watch": true,
         "resolveJsonModule": true,
+        "downlevelIteration": true,
         "rootDir": "src"
     },
     "include": [
