--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Autodrawer made using Electron",
   "main": "index.js",
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "buildElectron": "gulp && cd dist && electron index.js",
+    "electron": "cd dist && electron index.js"
   },
   "keywords": [
     "autodrawer",
@@ -18,6 +20,7 @@
     "@types/node": "^17.0.21",
     "bootstrap": "^5.1.3",
     "browserify": "^17.0.0",
+    "electron": "13.6.9",
     "glob": "^7.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
