--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "gulp",
     "build-electron": "gulp && cd dist && electron index.js",
-    "electron": "cd dist && electron index.js"
+    "electron": "cd dist && electron index.js",
+    "rebuild": "npm rebuild --runtime=electron --target=13.6.9 --disturl=https://atom.io/download/atom-shell --abi=79"
   },
   "keywords": [
     "autodrawer",
@@ -19,9 +20,8 @@
     "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.21",
     "bootstrap": "^5.1.3",
-    "browserify": "^17.0.0",
     "electron": "13.6.9",
-    "glob": "^7.2.0",
+    "electron-rebuild": "^3.2.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
@@ -30,14 +30,16 @@
     "gulp-sass": "^5.1.0",
     "gulp-size": "^4.0.1",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^3.0.0",
     "gulp-uglifycss": "^1.1.0",
     "merge-stream": "^2.0.0",
+    "node-loader": "^2.0.0",
     "sass": "^1.49.9",
-    "tsify": "^5.0.4",
+    "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "webpack": "^5.70.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "jimp": "^0.16.1",
