--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "ES2015",
         "esModuleInterop": true,
-        "target": "es5",
+        "target": "ES6",
         "noImplicitAny": false,
         "outDir": "dist",
         "baseUrl": ".",
