--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
+  "build": {
+    "appId": "com.felipeflohr",
+    "extends": null,
+    "files": [
+      "./package.json",
+      "./dist/**/*.js",
+      "./dist/**/*.png",
+      "./dist/**/*.css",
+      "./dist/**/*.html"
+    ],
+    "icon": "./res/icon.ico",
+    "win": {
+      "target": "portable"
+    }
+  },
+  "postinstall": "electron-builder install-app-deps",
   "name": "autodrawer",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Autodrawer made using Electron",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "gulp",
     "build-electron": "gulp && cd dist && electron index.js",
+    "build-dist": "gulp && electron-builder",
     "electron": "cd dist && electron index.js",
+    "dist": "electron-builder",
     "rebuild": "npm rebuild --runtime=electron --target=13.6.9 --disturl=https://atom.io/download/atom-shell --abi=79"
   },
   "keywords": [
@@ -21,6 +39,7 @@
     "@types/node": "^17.0.21",
     "bootstrap": "^5.1.3",
     "electron": "13.6.9",
+    "electron-builder": "^22.14.13",
     "electron-rebuild": "^3.2.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
