--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "gulp",
-    "build-electron": "gulp && cd dist && electron index.js",
-    "build-dist": "gulp && electron-builder",
+    "build-electron": "gulp && cd dist && cross-env NODE_ENV=production electron index.js",
+    "build-electron-dev": "gulp && cd dist && cross-env NODE_ENV=dev electron index.js",
+    "build-dist": "gulp && cross-env NODE_ENV=production electron-builder",
     "electron": "cd dist && electron index.js",
+    "electron-dev": "cd dist && cross-env NODE_ENV=dev electron index.js",
     "dist": "electron-builder",
     "rebuild": "npm rebuild --runtime=electron --target=13.6.9 --disturl=https://atom.io/download/atom-shell --abi=79"
   },
@@ -38,6 +40,7 @@
     "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.21",
     "bootstrap": "^5.1.3",
+    "cross-env": "^7.0.3",
     "electron": "13.6.9",
     "electron-builder": "^22.14.13",
     "electron-rebuild": "^3.2.7",
