--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "postinstall": "electron-builder install-app-deps",
   "name": "autodrawer",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Autodrawer made using Electron",
   "main": "dist/index.js",
   "scripts": {
@@ -26,7 +26,7 @@
     "build-dist": "gulp && cross-env NODE_ENV=production electron-builder",
     "electron": "cd dist && electron index.js",
     "electron-dev": "cd dist && cross-env NODE_ENV=dev electron index.js",
-    "dist": "electron-builder",
+    "dist": "cross-env NODE_ENV=production electron-builder",
     "rebuild": "npm rebuild --runtime=electron --target=13.6.9 --disturl=https://atom.io/download/atom-shell --abi=79"
   },
   "keywords": [
