--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "postinstall": "electron-builder install-app-deps",
   "name": "autodrawer",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "description": "Autodrawer made using Electron",
   "main": "dist/index.js",
   "scripts": {
@@ -55,6 +55,7 @@
     "gulp-uglifycss": "^1.1.0",
     "merge-stream": "^2.0.0",
     "node-loader": "^2.0.0",
+    "open": "^8.4.0",
     "sass": "^1.49.9",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
